Clean up test cover (#25)
* Remove unused methods

  - Also, Inventory Storage no longer seems to return raw
    PostgreSQL errors - drop logic for parsing them

* Use static vars for static UUIDs

* Remove unused methods, class. Use StandardCharsets.UTF_8 when encoding

* Remove all but unreachable conditions that are merely logged.

* Add test coverage for match key logic

* Unused imports